<resources>
    <string name="app_name">Contact</string>
    <string name="tv_recycler_name">Name*</string>
    <string name="tv_recycler_number">Phone Number*</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_add">Add</string>
    <string name="menu_item_save">Save</string>
    <string name="tv_email">Email</string>
    <string name="scrollable">Scroll</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">Update</string>
    <string name="tAdd">Add/ Edit</string>
    <string name="tDetails">Details</string>
    <string name="call">Call</string>
    <string name="search">Search</string>
    <string name="perfil">Perfil</string>
    <string name="remove">Remove Photo</string>
    <string name="title_camera">Camera</string>
    <string name="title_gallery">Gallery</string>
    <string name="action_cancel">Cancel</string>
</resources>