<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="16dp"
    android:paddingEnd="24dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_camera"
        app:icon="@drawable/ic_baseline_camera_alt_24"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_gallery"
        app:icon="@drawable/ic_baseline_collections_24"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/remove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove"
        app:icon="@drawable/detete_icon"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_cancel"
        app:icon="@drawable/ic_baseline_cancel_24"/>
</LinearLayout>